--- a/app/gwg/views/head.ejs
+++ b/app/gwg/views/head.ejs
@@ -9,9 +9,7 @@
 
         <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
 
-        <link rel="stylesheet" href="/css/normalize.css">
-        <link rel="stylesheet" href="/css/main.css">
-        <link rel="stylesheet" href="/css/hido.css">
+        <link rel="stylesheet" href="/css/gwg.css">
         <script src="/js/vendor/modernizr.js"></script>
     </head>
     <body>
