--- a/app/gwg/views/foot.ejs
+++ b/app/gwg/views/foot.ejs
@@ -2,9 +2,8 @@
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="/js/vendor/jquery.js"><\/script>')</script>
-        <script src="/js/vendor/jquery.cloudinary.js"></script>
-        <script src="/js/plugins.js"></script>
-        <script src="/js/main.js"></script>
+        <script src="/js/vendor/move.js"></script>
+        <script src="/js/gwg.js"></script>
 
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
