--- a/app/gwg/views/menu.ejs
+++ b/app/gwg/views/menu.ejs
@@ -1,4 +1,4 @@
-<h3><a href="/">General Working Group</a></h3>
+<h3 class="gwg"><a href="/">General Working Group</a></h3>
 <div class="main_menu">
     <nav>
     <% mainMenu(site.pages, 0) %>
