--- a/app/gwg/views/foot.ejs
+++ b/app/gwg/views/foot.ejs
@@ -3,6 +3,7 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="/js/vendor/jquery.js"><\/script>')</script>
         <script src="/js/vendor/move.js"></script>
+        <script src="/js/slideshow.js"></script>
         <script src="/js/gwg.js"></script>
 
         <script>
