--- a/app/gwg/views/index.ejs
+++ b/app/gwg/views/index.ejs
@@ -4,13 +4,15 @@
 
 <div id="logo"></div>
 <div class="slides">
+<div class="images">
    <% if (page.resources && page.resources.length != 0) { %>
-        <img src="<%=resource_basepath%>/w_350,h_350,c_fit/<%= page.resources[0].meta.public_id%>.jpg"/><br>
+        <img src="<%=resource_basepath%>/w_50,h_50,c_fit/<%= page.resources[0].meta.public_id%>.jpg"/><br>
    <% }%>
 </div>
 <div class="info"><% if (page.resources && page.resources.length != 0) { %><%- page.resources[0].description %><% }%></div>
 <div class="text">
     <%- page.description %>
+</div>
 </div>
 
 <% include foot.ejs %>
@@ -18,7 +20,12 @@
 <script src="/js/gwg.js"></script>
 <script>
     var bp = "<%= resource_basepath %>";
-
+    slideshow($(".images"),
+            <%- JSON.stringify(page.resources) %>,
+            {xOffset: 20, yOffset: 20, widthDelta: 100, heightDelta: 200});
+    function navigate_next(){
+        document.location.href = "<%=next_page.url%>";
+    }
 </script>
 
 
