--- a/app/gwg/public/css/gwg.css
+++ b/app/gwg/public/css/gwg.css
@@ -11,6 +11,7 @@ body {
 	top:0;left:0;
 	width:100%;
 	height:100%;
+    overflow:hidden;
 }
 
 @font-face {
@@ -253,7 +254,7 @@ box-shadow:         0px 0px 42px rgba(0, 0, 0, 0.24);
 }
 
 .info {
-    padding-top: 10px;
+
 }
 
 .footer nav {
