--- a/app/modules/cms/public/css/main.css
+++ b/app/modules/cms/public/css/main.css
@@ -176,14 +176,21 @@ select:active {
 .nav-item:hover {
     color: #48adff;
 }
+
 .user {
     position: fixed;
     top: 12px;
-    right: 28px;
+    right: 270px;
     color: #888;
     font-size: 13px;
 }
-
+#user-menu-toggle {
+    color: #48adff;
+    cursor: pointer;
+    width: 100%;
+    text-align: right;
+}
+#user-menu { display: none; }
 
 
 #control-bar {
@@ -209,7 +216,7 @@ select:active {
     /*color: #ccc;*/
     background-color: #f5f5f5;
     color: #555;
-    padding: 10px 20px 10px 15px;
+    padding: 12px 20px 10px 15px;
     font-size: 13px;
     z-index: 16;
 }
@@ -512,3 +519,6 @@ padding-top: 20px;
 .state-change-choice { cursor: pointer; padding-bottom: 4px;}
 .state-change-choice:hover { color: #48adff; }
 .state-change-choice.selected { color: #48adff;}
+
+
+
