--- a/app/modules/cms/views/nav.ejs
+++ b/app/modules/cms/views/nav.ejs
@@ -6,11 +6,22 @@
     <span id="extra-options"></span>
     </div>
     <div class="user">
-        <a href="#"><i class="fa fa-user"></i></a>
-        <div class="user-menu">
-        Logged in as <a href='/cms/update/User/<%- user._id %>'><%-user.email%></a> / <a href='/logout'>Logout</a>
-        </div>
+
+        <span id="user-menu">
+        Logged in as <a href='/cms/update/User/<%- user._id %>'><%-user.email%></a> / <a href='/logout'>Logout</a> &nbsp;&nbsp;
+        </span>
+
+        <span id="user-menu-toggle"><i class="fa fa-user" ></i></span>
     </div>
+    <script>
+        $("#user-menu-toggle").click(function () {
+    toggle_user_menu();
+});
+function toggle_user_menu() {
+    console.log($("#user-menu"))
+    $("#user-menu").toggle();
+}
+    </script>
 <% } else { %>
     <a href='/login'>Login</a>
 <% } %>
