--- a/app/gwg/views/index.ejs
+++ b/app/gwg/views/index.ejs
@@ -21,9 +21,12 @@
 <script>
     var bp = "<%= resource_basepath %>";
     if (document.location.pathname != '/') {
+        var idx = Number(window.location.hash.substring(1));
+        if (isNaN(idx)) idx = 0;
         slideshow($(".images"),
                 <%- JSON.stringify(page.resources) %>,
-                {xOffset: 20, yOffset: 20, widthDelta: 100, heightDelta: 200, $info: $(".info")});
+                {xOffset: 20, yOffset: 20, widthDelta: 100, heightDelta: 200,
+                    $info: $(".info"), index: idx});
     }
     function navigate_next(){
         document.location.href = "<%=next_page.url%>";
