--- a/app/modules/cms/views/cms/head.ejs
+++ b/app/modules/cms/views/cms/head.ejs
@@ -18,8 +18,9 @@
 <script src="/js/layers.js"></script>
 <script src="/js/form.js"></script>
 <script src="/js/form_fields.js"></script>
-<script src="/js/form_workspace.js"></script>
-<script>form_fields['page_field'] = form_field_page_layout;</script>
+<% for (var i=0; i<jsIncludes.length; i++) { %>
+<script src="<%= jsIncludes[i] %>"></script>
+<% } %>
 <script src="/js/browse.js"></script>
 <script src="/js/app.js"></script>
 
