very basic sidebar modularity

--- a/app/modules/cms/views/cms/head.ejs
+++ b/app/modules/cms/views/cms/head.ejs
@@ -17,6 +17,7 @@
 <script src="/js/layers.js"></script>
 <script src="/js/form.js"></script>
 <script src="/js/form_fields.js"></script>
+<script src="/js/form_modules.js"></script>
 <% for (var i=0; i<jsIncludes.length; i++) {
     var isJs = jsIncludes[i].indexOf(".js") != -1;
     if (isJs) { %>
