--- a/app/janecee/views/head.ejs
+++ b/app/janecee/views/head.ejs
@@ -8,14 +8,14 @@
         <meta name="viewport" content="width=1000">
 
         <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
+        <link rel="stylesheet" type="text/css" href="/css/style.css">
 
-        <link rel="stylesheet" href="/css/gwg.css">
         <script src="/js/vendor/modernizr.js"></script>
         <script src="/js/vendor/jquery.js" type="text/javascript"></script>
         <script src="/js/vendor/jquery.globalstylesheet.js" type="text/javascript"></script>
         <script src="/js/component.js" type="text/javascript"></script>
+        <script src="/js/jutil.js" type="text/javascript"></script>
         <script src="/js/world1.js" type="text/javascript"></script>
-        <script src="/js/style.css" type="text/javascript"></script>
         <script src="/js/ceearchitects.js" type="text/javascript"></script>
     </head>
     <body>
@@ -23,4 +23,3 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div id="root">
