--- a/app/janecee/views/index.ejs
+++ b/app/janecee/views/index.ejs
@@ -6,7 +6,7 @@
     <div class="slides">
         <div class="images">
             <% if (page.resources && page.resources.length != 0) { %>
-            <!-- <img src="<%= resource_basepath %>/w_50,h_50,c_fit/<%= page.resources[0].meta.public_id %>.jpg"/><br> -->
+                <img src="<%= resource_basepath %>/w_200,c_fit/<%= page.resources[0].meta.public_id %>.jpg"/>
             <% } %>
         </div>
         <div class="info">
