description needs finessing

--- a/app/janecee/views/head.ejs
+++ b/app/janecee/views/head.ejs
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=1000">
         <%try { %><meta property="og:image" content="<%= resource_basepath %>/w_200,c_fit/<%= page.resources[0].meta.public_id %>.jpg"><%} catch (E){} %>
-        <%try { %><meta property="og:description" content="<%=page.body%>"><%} catch (E){} %>
+        <%/* try { %><meta property="og:description" content="<%=page.body%>"><%} catch (E){} */ %>
 
         <link rel="stylesheet" type="text/css" href="/css/style.css">
 
